# minimuxer

./: .gitignore  Makefile  Package.resolved  Package.swift  README.md
Plugins/RustBuildPlugin/: RustBuildPlugin.swift
RustBridge/: Cargo.toml  Makefile  MinimuxerBridge.swift
RustBridge/lib/RustBridge.xcframework/: Info.plist
RustBridge/src/: bridge.rs  lib.rs  post17.rs
Sources/: AfcFileManager.swift  Constants.swift  Device.swift  DeviceEndpoint.swift  Heartbeat.swift  IfaceScanner.swift  Install.swift  Jit.swift  Minimuxer.swift  Mounter.swift  Muxer.swift  NetworkObserver.swift  Provision.swift  RawPacket.swift
Sources/Minimuxer/: Device.swift  Heartbeat.swift  Jit.swift  MinimuxerError.swift  Mounter.swift
Sources/Networking/: IfaceScanner.swift  NetworkObserver.swift
Sources/RustBridge/: MinimuxerBridge.swift
Sources/RustBridge/src/: bridge.rs  constants.rs  lib.rs  post17.rs
src/: afc_file_manager.rs  device.rs  install.rs  jit.rs  lib.rs  muxer.rs  provision.rs
